feat: create license for content and code

--- a/content/posts/forth-post/_.md
+++ b/content/posts/forth-post/_.md
@@ -1,7 +1,7 @@
 ---
-title: "Second post"
+title: "Forth post"
 description: "Lorem ipsum dolor sit amet"
-pubDate: "2025/04/22"
+pubDate: "2025/04/24"
 heroImage: "./hero.jpg"
 ---
 
