--- a/content/posts/first-post/_.md
+++ b/content/posts/first-post/_.md
@@ -1,7 +1,7 @@
 ---
 title: "First post"
 description: "Lorem ipsum dolor sit amet"
-pubDate: "Jul 08 2022"
+pubDate: "2025/04/21"
 heroImage: "./hero.jpg"
 ---
 
