--- a/content/posts/third-post/_.md
+++ b/content/posts/third-post/_.md
@@ -1,7 +1,7 @@
 ---
 title: "Third post"
 description: "Lorem ipsum dolor sit amet"
-pubDate: "Jul 22 2022"
+pubDate: "2025/04/23"
 heroImage: "./hero.jpg"
 ---
 
